Created a swagger scafold for API documentation. Added 'projects' to the scafold. Added better logging for the project API routes.
Added a scafold for API tests.
